--- a/app/views/todo_lists/index.html.erb
+++ b/app/views/todo_lists/index.html.erb
@@ -1,10 +1,12 @@
 <% @todo_lists.each do |todo_list| %>
-  <div class="index_row clearfix">
-    <div class="todo_list_title">
-      <h2><%= link_to todo_list.title, todo_list %></h2>
-      <p class="todo_list_sub_title"><%= todo_list.description %></p>
+  <% if policy(todo_list).edit? %>
+    <div class="index_row clearfix">
+      <div class="todo_list_title">
+        <h2><%= link_to todo_list.title, todo_list %></h2>
+        <p class="todo_list_sub_title"><%= todo_list.description %></p>
+      </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
 
 <div class="links">
