--- a/app/views/todo_lists/show.html.erb
+++ b/app/views/todo_lists/show.html.erb
@@ -1,21 +1,26 @@
-<p id="notice"><%= notice %></p>
+<% if current_user == @todo_list.user %>
+  <p id="notice"><%= notice %></p>
 
-<h2 class="todo_list_title"><%= @todo_list.title %></h2>
-<p class="todo_list_sub_title"><%= @todo_list.description %></p>
+  <h2 class="todo_list_title"><%= @todo_list.title %></h2>
+  <p class="todo_list_sub_title"><%= @todo_list.description %></p>
 
-<div id="todo_items_wrapper">
-  <%= render @todo_list.todo_items %>
-  <div id="form">
-    <%= render 'todo_items/form' %>
+  <div id="todo_items_wrapper">
+    <%= render @todo_list.todo_items %>
+    <div id="form">
+      <%= render 'todo_items/form' %>
+    </div>
   </div>
-</div>
 
-<div class="links">
-  <% if policy(TodoList).edit? %>
-  <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
-  <%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: 'Are you sure?' } %> |
-  <% end %>
-  <%= link_to 'Back', todo_lists_path %>
-</div>
+  <div class="links">
+    <%= link_to 'Edit', edit_todo_list_path(@todo_list) %> |
+    <%= link_to 'Delete', todo_list_path(@todo_list), method: :delete, data: { confirm: 'Are you sure?' } %> |
+    <%= link_to 'Back', todo_lists_path %>
+  </div>
+  <% else %>
+    <div class="links">
+      <h2>You don't have access to this list!</h2>
+      <%= link_to 'Go back', todo_lists_path %>
+    </div>
+<% end %>
 
 
