--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -6,15 +6,18 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <%= link_to "Login", new_user_session_path, class: "nav-link", id:"#" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Signup", new_user_registration_path, class: "nav-link", id:"#" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Log out", destroy_user_session_path, class: "nav-link", id: "#", method: "delete" %>
-      </li>
+      <% if user_signed_in? %>
+        <li class="nav-item">
+          <%= link_to "Log out", destroy_user_session_path, class: "nav-link", id: "#", method: "delete" %>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <%= link_to "Login", new_user_session_path, class: "nav-link", id:"#" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to "Signup", new_user_registration_path, class: "nav-link", id:"#" %>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
